implement patient profile page

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -295,6 +295,7 @@
   "glucose-management-indicator": "GMI (estimated HbA1c)",
   "glucose-management-indicator-tooltip": "**GMI (Glucose Management Indicator):**\n\nTells you what your calculated HbA1c level is likely to be, based on the average glucose level from your CGM readings.",
   "glycemic-target": "Glycemic target",
+  "glycemia-units": "Glycemia units",
   "hba1c": "HbA1c",
   "hcp-confirm-ack-checkbox": "Healthcare professional confirmation checkbox",
   "hcp-profession": "Profession",
@@ -448,6 +449,7 @@
   "patient": "Patient",
   "patient-list-search-placeholder": "Search for a patient...",
   "patient-list-search-tooltip": "Search by first name, last name or birthdate (dd/mm/yyyy)",
+  "patient-profile": "Patient profile",
   "patient-profile-hba1c": "Initial HbA1c {{hba1cDate}}",
   "patient-update-error": "Patient update failed",
   "patient-update-success": "Patient update succeeded",
@@ -472,6 +474,7 @@
   "progression-proposal": "Progression proposal",
   "pump-battery-empty": "Pump battery empty",
   "ratio-dose": "Ratio",
+  "range-and-alerts": "Range & alerts",
   "readings-in-range-bgm-daily-average": "**Readings In Range:** Number of {{smbgLabel}} readings.",
   "recommended-carbs": "Avg. Recommended carbs",
   "refresh": "Refresh",
@@ -520,7 +523,6 @@
   "start-time": "Start time",
   "switch-role-success": "Your account has been successfully switched to HCP account",
   "system": "System",
-  "target-and-alerts": "Target & alerts",
   "team-add-member-dialog-checkbox-admin": "Define as administrator",
   "team-add-member-dialog-title": "New member",
   "team-code": "Please enter the team code (9 digits)",
