fix translation keys

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -621,6 +621,7 @@
   "verify-email-success-title": "Your e-mail address was verified.",
   "verify-email-title": "Verify your email address",
   "very-low-bg-input": "Very low blood glucose input",
+  "weight": "Weight",
   "yesterday": "Yesterday",
   "years-old": "years old"
 }
