--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -172,6 +172,7 @@
   "button-team-add-member": "Add healthcare professional",
   "button-team-leave": "Leave team",
   "button-validate": "Validate",
+  "cannula-size": "Cannula size",
   "care-team-membership": "Teams I belong to:",
   "care-team-no-membership": "No care teams",
   "care-team-values-applied": "Care team values applied",
@@ -275,6 +276,7 @@
   "estimated-total-insulin-avg-how-calculate-tooltip": "**How we calculate this:**  All basal and bolus insulin delivery during closed-loop period (in Units) added together, normalised for 24h, and divided by the number of days in this view.",
   "estimated-total-insulin-how-calculate-tooltip": "**How we calculate this:** All basal and bolus insulin delivery during closed-loop period (in Units) added together, and normalised for 24h",
   "event-trigger-threshold": "Event trigger threshold",
+  "equipment-date": "Equipment date",
   "feedback-checkbox": "Feedback checkbox",
   "filter-cannot-apply-pending-tab": "Filters cannot be applied on Pending tab",
   "filter-data-not-transmitted": "Filter patients having a \"Data not transmitted\" monitoring alert",
@@ -295,6 +297,7 @@
   "glucose-management-indicator": "GMI (estimated HbA1c)",
   "glucose-management-indicator-tooltip": "**GMI (Glucose Management Indicator):**\n\nTells you what your calculated HbA1c level is likely to be, based on the average glucose level from your CGM readings.",
   "glycemic-target": "Glycemic target",
+  "glycemia-units": "Glycemia units",
   "hba1c": "HbA1c",
   "hcp-confirm-ack-checkbox": "Healthcare professional confirmation checkbox",
   "hcp-profession": "Profession",
@@ -448,6 +451,7 @@
   "patient": "Patient",
   "patient-list-search-placeholder": "Search for a patient...",
   "patient-list-search-tooltip": "Search by first name, last name or birthdate (dd/mm/yyyy)",
+  "patient-profile": "Patient profile",
   "patient-profile-hba1c": "Initial HbA1c {{hba1cDate}}",
   "patient-update-error": "Patient update failed",
   "patient-update-success": "Patient update succeeded",
@@ -472,6 +476,7 @@
   "progression-proposal": "Progression proposal",
   "pump-battery-empty": "Pump battery empty",
   "ratio-dose": "Ratio",
+  "range-and-alerts": "Range & alerts",
   "readings-in-range-bgm-daily-average": "**Readings In Range:** Number of {{smbgLabel}} readings.",
   "recommended-carbs": "Avg. Recommended carbs",
   "refresh": "Refresh",
@@ -520,7 +525,6 @@
   "start-time": "Start time",
   "switch-role-success": "Your account has been successfully switched to HCP account",
   "system": "System",
-  "target-and-alerts": "Target & alerts",
   "team-add-member-dialog-checkbox-admin": "Define as administrator",
   "team-add-member-dialog-title": "New member",
   "team-code": "Please enter the team code (9 digits)",
@@ -618,5 +622,6 @@
   "verify-email-title": "Verify your email address",
   "very-low-bg-input": "Very low blood glucose input",
   "weight": "Weight",
-  "yesterday": "Yesterday"
+  "yesterday": "Yesterday",
+  "years-old": "years old"
 }
