YLP-3333 Tooltip for Zen mode in Daily view

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -623,5 +623,6 @@
   "very-low-bg-input": "Very low blood glucose input",
   "weight": "Weight",
   "yesterday": "Yesterday",
-  "years-old": "years old"
+  "years-old": "years old",
+  "zen-mode": "Zen mode"
 }
