--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -120,7 +120,7 @@
   "aria-team-leave-dialog-title": "Leave care team",
   "average-daily-insulin-tooltip": "**Avg. Daily Total Insulin:** All basal and bolus insulin delivery (in Units) added together, divided by the number of days in this view",
   "average-daily-total-insulin": "Avg. daily delivered Insulin",
-  "average-daily-estimated-total-insulin": "Estimated avg. daily insulin requirement",
+  "average-daily-estimated-total-insulin": "Est. avg. daily insulin requirement",
   "average-glucose": "Avg. Glucose ({{bgSourceLabel}})",
   "average-glucose-tooltip": "**Avg. Glucose ({{bgSourceLabel}}):** All {{bgSourceLabel}} glucose values added together, divided by the number of readings.",
   "avg-daily-carbs": "Avg. Daily Carbs",
@@ -271,7 +271,7 @@
   "error-http-500": "Something went wrong. Please try again in a few moments. If problem persists, contact support for assistance",
   "error-patient-already-in-team": "This patient is already sharing data with the team.",
   "error-patient-already-invited": "This patient has already been invited and hasn't confirmed yet.",
-  "estimated-total-insulin": "Estimated total insulin requirement",
+  "estimated-total-insulin": "Est. total insulin requirement",
   "estimated-total-insulin-tooltip": "**Estimated total insulin requirement:** Estimation of the patient's total insulin requirements (both basal and bolus, in Units) over 24 hours. This estimation only takes into account the period in Loop Mode, so it is as close as possible to the patient's actual physiological needs.",
   "estimated-total-insulin-avg-how-calculate-tooltip": "**How we calculate this:**  All basal and bolus insulin delivery during closed-loop period (in Units) added together, normalised for 24h, and divided by the number of days in this view.",
   "estimated-total-insulin-how-calculate-tooltip": "**How we calculate this:** All basal and bolus insulin delivery during closed-loop period (in Units) added together, and normalised for 24h",
@@ -298,6 +298,7 @@
   "glucose-management-indicator-tooltip": "**GMI (Glucose Management Indicator):**\n\nTells you what your calculated HbA1c level is likely to be, based on the average glucose level from your CGM readings.",
   "glycemic-target": "Glycemic target",
   "glycemia-units": "Glycemia units",
+  "gram-unit": "g",
   "hba1c": "HbA1c",
   "hcp-confirm-ack-checkbox": "Healthcare professional confirmation checkbox",
   "hcp-profession": "Profession",
