--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -275,6 +275,7 @@
   "estimated-total-insulin-tooltip": "**Estimated total insulin requirement:** Estimation of the patient's total insulin requirements (both basal and bolus, in Units) over 24 hours. This estimation only takes into account the period in Loop Mode, so it is as close as possible to the patient's actual physiological needs.",
   "estimated-total-insulin-avg-how-calculate-tooltip": "**How we calculate this:**  All basal and bolus insulin delivery during closed-loop period (in Units) added together, normalised for 24h, and divided by the number of days in this view.",
   "estimated-total-insulin-how-calculate-tooltip": "**How we calculate this:** All basal and bolus insulin delivery during closed-loop period (in Units) added together, and normalised for 24h",
+  "event-icon": "Event icon",
   "event-trigger-threshold": "Event trigger threshold",
   "equipment-date": "Equipment date",
   "feedback-checkbox": "Feedback checkbox",
@@ -502,6 +503,7 @@
   "sensor-usage-tooltip": "**Sensor Usage:** Time the {{cbgLabel}} collected data, divided by the total time represented in this view.",
   "sensor-warmup": "Sensor warmup",
   "sensor-warmup-session-end": "Session end",
+  "settings-change": "Settings change",
   "severe-hypoglycemia": "Severe hypoglycemia",
   "severe-hypoglycemia-below": "Severe hypoglycemia below",
   "severe-hypoglycemia-threshold": "Severe hypoglycemia threshold",
