YLP-3616 Time In Tight Range (TITR) statistic

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -125,6 +125,7 @@
   "average-glucose-tooltip": "**Avg. Glucose ({{bgSourceLabel}}):** All {{bgSourceLabel}} glucose values added together, divided by the number of readings.",
   "avg-daily-carbs": "Avg. Daily Carbs",
   "avg-daily-declared-carbs": "Avg. Daily declared carbs",
+  "avg-daily-time-in-tight-range": "Avg. Daily Time In Tight Range",
   "avg-time-loop": "Avg. Daily Time In Loop Mode",
   "avg-time-loop-how-calculate": "**How we calculate this**:\n\n(%) is the duration in loop mode ON or OFF divided by the total duration of basals for this time period.\n\n**(time)** is the average daily time spent in loop mode ON or OFF.",
   "avg-time-loop-tooltip": "**Time In Loop Mode**: Daily average of the time spent in automated basal delivery.",
@@ -196,6 +197,8 @@
   "columns-settings-cannot-changed-pending-tab": "Columns settings cannot be changed while on the pending tab",
   "compute-ndays-time-in-range": "**How we calculate this:**\n\n**(%)** is the number of readings in range divided by all readings for this time period.\n\n**(time)** is number of readings in range multiplied by the {{cbgLabel}} sample frequency.",
   "compute-oneday-time-in-range": "**How we calculate this:**\n\n**(%)** is the number of readings in range divided by all readings for this time period.\n\n**(time)** is 24 hours multiplied by % in range.",
+  "compute-ndays-time-in-tight-range": "**How we calculate this:**\n\n**(%)** is the number of readings in tight range divided by all readings for this time period.\n\n**(time)** is number of readings in range multiplied by the {{cbgLabel}} sample frequency.",
+  "compute-oneday-time-in-tight-range": "**How we calculate this:**\n\n**(%)** is the number of readings in tight range divided by all readings for this time period.\n\n**(time)** is 24 hours multiplied by % in range.",
   "configure-monitoring-alerts": "Configure monitoring alerts",
   "confirmed-dose": "Avg. Confirmed dose",
   "consent": "Consent",
@@ -575,6 +578,9 @@
   "time-in-range-cgm-daily-average": "**Time In Range:** Daily average of the time spent in range, based on CGM readings.",
   "time-in-range-cgm-one-day": "**Time In Range:** Time spent in range, based on CGM readings.",
   "time-in-range-tooltip": "Time In Range",
+  "time-in-tight-range": "Time In Tight Range",
+  "time-in-tight-range-cgm-daily-average": "**Time In Tight Range:** Daily average of the time spent in tight range, based on CGM readings.",
+  "time-in-tight-range-cgm-one-day": "**Time In Tight Range:** Time spent in tight range, based on CGM readings.",
   "time-loop": "Time In Loop Mode",
   "time-loop-how-calculate": "**How we calculate this**:\n\n(%) is the duration in loop mode ON or OFF divided by the total duration of basals for this time period.\n\n(time) is the estimated time in each mode.",
   "time-loop-tooltip": "**Time In Loop Mode**: Time spent in automated basal delivery.",
