--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -83,6 +83,7 @@
   "alarm-urgent-low-soon-description": "The transmitter predicts that your glucose will be at or below {{value}} {{unit}} in 20 minutes.",
   "alarm-urgent-low-soon-title": "Urgent low soon",
   "alarm-with-code": "Alarm {{code}}",
+  "alerts": "Alerts",
   "alert-change-password-email-failed": "Impossible to send the change password e-mail. Please try again later.",
   "alert-change-password-email-success": "E-mail sent successfully",
   "alert-email-not-verified": "You have not verified your email.",
@@ -481,7 +482,8 @@
   "progression-proposal": "Progression proposal",
   "pump-battery-empty": "Pump battery empty",
   "ratio-dose": "Ratio",
-  "range-and-alerts": "Range & alerts",
+  "range": "Range",
+  "range-description": "Set manually each value of the glucose thresholds or apply international recommendations for:",
   "readings-in-range-bgm-daily-average": "**Readings In Range:** Number of {{smbgLabel}} readings.",
   "recommended-carbs": "Avg. Recommended carbs",
   "refresh": "Refresh",
