YLP-3640 New UI for tooltips in Daily view

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -300,8 +300,9 @@
   "gender-m": "Male",
   "glucose-management-indicator": "GMI (estimated HbA1c)",
   "glucose-management-indicator-tooltip": "**GMI (Glucose Management Indicator):**\n\nTells you what your calculated HbA1c level is likely to be, based on the average glucose level from your CGM readings.",
-  "glycemic-target": "Glycemic target",
+  "glycemia": "Glycemia",
   "glycemia-units": "Glycemia units",
+  "glycemic-target": "Glycemic target",
   "gram-unit": "g",
   "hba1c": "HbA1c",
   "hcp-confirm-ack-checkbox": "Healthcare professional confirmation checkbox",
