YLP-3690 First draft

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -570,6 +570,7 @@
   "team-page-success-invite-hcp": "Invite sent to {{email}}!",
   "team-update-error": "Team update failed",
   "team-update-success": "Team update succeeded",
+  "temp-basal": "Temp basal",
   "terms-checkbox": "Terms checkbox",
   "terms-of-use": "Terms of use",
   "text-copy": "Copy as text",
