implement readonly fields per profile type

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -273,8 +273,12 @@
   "error-email-verification": "An error occurred during the process.",
   "error-http-40x": "An error occurred. Please contact support for assistance",
   "error-http-500": "Something went wrong. Please try again in a few moments. If problem persists, contact support for assistance",
+  "error-hyperglycemia": "Hyperglycemia must be between hypoglycemia and severe hyperglycemia",
+  "error-hypoglycemia": "Hypoglycemia must be between severe hypoglycemia and hyperglycemia",
   "error-patient-already-in-team": "This patient is already sharing data with the team.",
   "error-patient-already-invited": "This patient has already been invited and hasn't confirmed yet.",
+  "error-severe-hyperglycemia": "Severe hyperglycemia must be greater than hyperglycemia",
+  "error-severe-hypoglycemia": "Severe hypoglycemia must be less than hypoglycemia",
   "estimated-total-insulin": "Est. total insulin requirement",
   "estimated-total-insulin-tooltip": "**Estimated total insulin requirement:** Estimation of the patient's total insulin requirements (both basal and bolus, in Units) over 24 hours. This estimation only takes into account the period in Loop Mode, so it is as close as possible to the patient's actual physiological needs.",
   "estimated-total-insulin-avg-how-calculate-tooltip": "**How we calculate this:**  All basal and bolus insulin delivery during closed-loop period (in Units) added together, normalised for 24h, and divided by the number of days in this view.",
@@ -485,6 +489,13 @@
   "ratio-dose": "Ratio",
   "range": "Range",
   "range-description": "Set manually each value of the glucose thresholds or apply international recommendations for:",
+  "range-hyperglycemia": "Hyperglycemia",
+  "range-hypoglycemia": "Hypoglycemia",
+  "range-profile-type-1-and-2": "Type 1",
+  "range-profile-pregnancy-type-1": "Pregnancy type 1",
+  "range-profile-custom": "Custom",
+  "range-severe-hyperglycemia": "Severe hyperglycemia",
+  "range-severe-hypoglycemia": "Severe hypoglycemia",
   "readings-in-range-bgm-daily-average": "**Readings In Range:** Number of {{smbgLabel}} readings.",
   "recommended-carbs": "Avg. Recommended carbs",
   "refresh": "Refresh",
