--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -273,12 +273,12 @@
   "error-email-verification": "An error occurred during the process.",
   "error-http-40x": "An error occurred. Please contact support for assistance",
   "error-http-500": "Something went wrong. Please try again in a few moments. If problem persists, contact support for assistance",
-  "error-hyperglycemia": "Hyperglycemia must be between hypoglycemia and severe hyperglycemia",
-  "error-hypoglycemia": "Hypoglycemia must be between severe hypoglycemia and hyperglycemia",
+  "error-hyperglycemia": "Hyperglycemia threshold value must be between hypoglycemia threshold value and severe hyperglycemia threshold value",
+  "error-hypoglycemia": "Hypoglycemia threshold value must be between severe hypoglycemia threshold value and hyperglycemia threshold value",
   "error-patient-already-in-team": "This patient is already sharing data with the team.",
   "error-patient-already-invited": "This patient has already been invited and hasn't confirmed yet.",
-  "error-severe-hyperglycemia": "Severe hyperglycemia must be greater than hyperglycemia",
-  "error-severe-hypoglycemia": "Severe hypoglycemia must be less than hypoglycemia",
+  "error-severe-hyperglycemia": "Severe hyperglycemia threshold value must be greater than hyperglycemia threshold value",
+  "error-severe-hypoglycemia": "Severe hypoglycemia threshold value must be less than hypoglycemia threshold value",
   "estimated-total-insulin": "Est. total insulin requirement",
   "estimated-total-insulin-tooltip": "**Estimated total insulin requirement:** Estimation of the patient's total insulin requirements (both basal and bolus, in Units) over 24 hours. This estimation only takes into account the period in Loop Mode, so it is as close as possible to the patient's actual physiological needs.",
   "estimated-total-insulin-avg-how-calculate-tooltip": "**How we calculate this:**  All basal and bolus insulin delivery during closed-loop period (in Units) added together, normalised for 24h, and divided by the number of days in this view.",
@@ -462,7 +462,7 @@
   "patient": "Patient",
   "patient-list-search-placeholder": "Search for a patient...",
   "patient-list-search-tooltip": "Search by first name, last name or birthdate (dd/mm/yyyy)",
-  "patient-profile": "Patient profile",
+  "patient-profile": "Profile",
   "patient-profile-hba1c": "Initial HbA1c {{hba1cDate}}",
   "patient-update-error": "Patient update failed",
   "patient-update-success": "Patient update succeeded",
