YLP-3580 Working version

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -26,6 +26,7 @@
   "acknowledge-training": "I went through the entire training and I understood it",
   "actions": "Actions",
   "activation-code": "Activation code",
+  "active-insulin": "Active insulin",
   "add-new-patient-disabled-info": "To invite a patient, you must first select a care team from the dropdown menu. You can create you own care team if you need to. Alternatively, you can provide the patient with your YourLoops email address so they can enable private data sharing with you.",
   "add-patient": "Add a patient",
   "added": "Added",
@@ -322,7 +323,8 @@
   "identification-code": "Identification code",
   "information": "Information",
   "initial-hba1c": "Initial HbA1c",
-  "insulin-active": "Insulin active",
+  "insulin": "Insulin",
+  "insulin-on-board": "Insulin on board (IOB)",
   "insulin-unit-u": "U",
   "invalid-code": "The code is invalid",
   "invalid-email": "Invalid email address (special characters are not allowed).",
