YLP-2823 Fixed FR parameter translation

--- a/locales/fr/parameter.json
+++ b/locales/fr/parameter.json
@@ -43,7 +43,7 @@
   "MD_B3_FACTOR": "MD B3 factor",
   "MD_B4_FACTOR": "Réactivité montée rapide",
   "MEAL_RATIO_BREAKFAST": "Ratio petit-déjeuner",
-  "MEAL_RATIO_BREAKFAST_FACTOR": "Réactivité du petit déjeuner",
+  "MEAL_RATIO_BREAKFAST_FACTOR": "Réactivité du petit-déjeuner",
   "MEAL_RATIO_DINNER": "Ratio dîner",
   "MEAL_RATIO_DINNER_FACTOR": "Réactivité du dîner",
   "MEAL_RATIO_LUNCH": "Ratio déjeuner",
