Fixed correctly the translations

--- a/locales/fr/parameter.json
+++ b/locales/fr/parameter.json
@@ -34,7 +34,7 @@
   "IOB_TAU_S": "Vitesse d’action de l’insuline",
   "JUDO": "Judo",
   "KP_COEFF": "Réactivité post-repas",
-  "LARGE_MEAL_BREAKFAST": "Petit-déjeuner - grand",
+  "LARGE_MEAL_BREAKFAST": "Petit déjeuner - grand",
   "LARGE_MEAL_DINNER": "Dîner - grand",
   "LARGE_MEAL_LUNCH": "Déjeuner - grand",
   "MAX_GLYCEMIA_DIFF": "Max glycémie diff",
@@ -42,13 +42,13 @@
   "MD_B1_FACTOR": "MD B1 factor",
   "MD_B3_FACTOR": "MD B3 factor",
   "MD_B4_FACTOR": "Réactivité montée rapide",
-  "MEAL_RATIO_BREAKFAST": "Ratio petit-déjeuner",
-  "MEAL_RATIO_BREAKFAST_FACTOR": "Réactivité du petit-déjeuner",
+  "MEAL_RATIO_BREAKFAST": "Ratio petit déjeuner",
+  "MEAL_RATIO_BREAKFAST_FACTOR": "Réactivité du petit déjeuner",
   "MEAL_RATIO_DINNER": "Ratio dîner",
   "MEAL_RATIO_DINNER_FACTOR": "Réactivité du dîner",
   "MEAL_RATIO_LUNCH": "Ratio déjeuner",
   "MEAL_RATIO_LUNCH_FACTOR": "Réactivité du déjeuner",
-  "MEDIUM_MEAL_BREAKFAST": "Petit-déjeuner - moyen",
+  "MEDIUM_MEAL_BREAKFAST": "Petit déjeuner - moyen",
   "MEDIUM_MEAL_DINNER": "Dîner - moyen",
   "MEDIUM_MEAL_LUNCH": "Déjeuner - moyen",
   "MIXED": "Sport - Mixte",
@@ -73,7 +73,7 @@
   "SKATING": "Patinage",
   "SKIING": "Ski",
   "SLOPE_THRESH_ALGO_MD": "Slope thresh algo",
-  "SMALL_MEAL_BREAKFAST": "Petit-déjeuner - petit",
+  "SMALL_MEAL_BREAKFAST": "Petit déjeuner - petit",
   "SMALL_MEAL_DINNER": "Dîner - petit",
   "SMALL_MEAL_LUNCH": "Déjeuner - petit",
   "SNACK_INHIBITION_DURATION": "Durée d'inhibition post resucrage",
