add integration tests

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -273,12 +273,12 @@
   "error-email-verification": "An error occurred during the process.",
   "error-http-40x": "An error occurred. Please contact support for assistance",
   "error-http-500": "Something went wrong. Please try again in a few moments. If problem persists, contact support for assistance",
-  "error-hyperglycemia": "Hyperglycemia threshold value must be between hypoglycemia threshold value and severe hyperglycemia threshold value",
-  "error-hypoglycemia": "Hypoglycemia threshold value must be between severe hypoglycemia threshold value and hyperglycemia threshold value",
+  "error-hyperglycemia": "Hyperglycemia limit must be between hypoglycemia limit and severe hyperglycemia limit",
+  "error-hypoglycemia": "Hypoglycemia limit must be between severe hypoglycemia limit and hyperglycemia limit",
   "error-patient-already-in-team": "This patient is already sharing data with the team.",
   "error-patient-already-invited": "This patient has already been invited and hasn't confirmed yet.",
-  "error-severe-hyperglycemia": "Severe hyperglycemia threshold value must be greater than hyperglycemia threshold value",
-  "error-severe-hypoglycemia": "Severe hypoglycemia threshold value must be less than hypoglycemia threshold value",
+  "error-severe-hyperglycemia": "Severe hyperglycemia limit must be between hyperglycemia limit and the max cgm limit",
+  "error-severe-hypoglycemia": "Severe hypoglycemia limit must be between hypoglycemia limit and the minimum allowed value",
   "estimated-total-insulin": "Est. total insulin requirement",
   "estimated-total-insulin-tooltip": "**Estimated total insulin requirement:** Estimation of the patient's total insulin requirements (both basal and bolus, in Units) over 24 hours. This estimation only takes into account the period in Loop Mode, so it is as close as possible to the patient's actual physiological needs.",
   "estimated-total-insulin-avg-how-calculate-tooltip": "**How we calculate this:**  All basal and bolus insulin delivery during closed-loop period (in Units) added together, normalised for 24h, and divided by the number of days in this view.",
