--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -429,6 +429,7 @@
   "my-caregivers": "My caregivers",
   "my-private-practice": "My private practice",
   "new-message": "New",
+  "new-time": "New time",
   "new-unread-messages": "The patient has sent you new messages",
   "night-mode": "Night mode",
   "no": "No",
@@ -475,6 +476,7 @@
   "preset-dates-range-2weeks": "2 weeks",
   "preset-dates-range-3months": "3 months",
   "preset-dates-range-4weeks": "4 weeks",
+  "previous-time": "Previous time",
   "privacy-policy": "Privacy Policy",
   "privacy-policy-checkbox": "Privacy policy checkbox",
   "product-labelling": "Product Labelling",
