--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -181,6 +181,9 @@
   "Weight": "Weight",
   "Why is this grey? There is not enough data to show this statistic.": "Why is this grey? There is not enough data to show this statistic.",
   "YYYY-MM-DD": "YYYY-MM-DD",
+  "ZenModeGlycemiaTarget": "Target glucose level",
+  "ZenModeInitialGlycemiaTarget": "Set target",
+  "ZenModeGlycemiaOffset": "Difference",
   "abbrev_duration_day": "d",
   "abbrev_duration_hour": "h",
   "abbrev_duration_minute": "min",
