YLP-2135 as hcp i can attribute a patient profile  (#1837)
* YLP-2419 use new routes from harbour (#1834)
* add some comments
* migrate to new api endpoint for caregivers
* migrate to new api endpoint for getting patient direct shares
* small review feedbacks and remove comment
* update changelog
* update tests accordingly

* remvoe death code

* YLP-3694 split profile menu (#1836)

* implement functionality
* fix lint issues
* PR feedbacks

* YLP-3665 create ui for range section (#1845)

* implement ui for range
* plug API backend (save diabetic profile)
* implement unit visualisation based on authenticated user preferences
* fix: wrong displayed values when a connected user change its units
* implement readonly fields per profile type
* pr reviews: direct mutating props
* PR feedbacks
* fix: patient profile was assigned incorrectly and erased when changing profile and mas bgclamp always in mgdl

* YLP-2135 implements tests (#1849)

* remove cyclic dependancy apparead after merged main changes

* implements tests

* wip: implement integration tests

* fix: patient not able to see their data

* add integration tests

* fix: patient nav bar test not algin wit latest traduction

* add missing assert

* PR feedbacks

* PR feedbacks 2

* add export in medical domain index

* fix build: remove unused import

* Update Changelog

* fix test: nav bar text changed

* fix sonar issue: simplify patient profile view section rendering

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -84,6 +84,7 @@
   "alarm-urgent-low-soon-description": "The transmitter predicts that your glucose will be at or below {{value}} {{unit}} in 20 minutes.",
   "alarm-urgent-low-soon-title": "Urgent low soon",
   "alarm-with-code": "Alarm {{code}}",
+  "alerts": "Alerts",
   "alert-change-password-email-failed": "Impossible to send the change password e-mail. Please try again later.",
   "alert-change-password-email-success": "E-mail sent successfully",
   "alert-email-not-verified": "You have not verified your email.",
@@ -273,8 +274,12 @@
   "error-email-verification": "An error occurred during the process.",
   "error-http-40x": "An error occurred. Please contact support for assistance",
   "error-http-500": "Something went wrong. Please try again in a few moments. If problem persists, contact support for assistance",
+  "error-hyperglycemia": "Hyperglycemia limit must be between hypoglycemia limit and severe hyperglycemia limit",
+  "error-hypoglycemia": "Hypoglycemia limit must be between severe hypoglycemia limit and hyperglycemia limit",
   "error-patient-already-in-team": "This patient is already sharing data with the team.",
   "error-patient-already-invited": "This patient has already been invited and hasn't confirmed yet.",
+  "error-severe-hyperglycemia": "Severe hyperglycemia limit must be between hyperglycemia limit and the max cgm limit",
+  "error-severe-hypoglycemia": "Severe hypoglycemia limit must be between hypoglycemia limit and the minimum allowed value",
   "estimated-total-insulin": "Est. total insulin requirement",
   "estimated-total-insulin-tooltip": "**Estimated total insulin requirement:** Estimation of the patient's total insulin requirements (both basal and bolus, in Units) over 24 hours. This estimation only takes into account the period in Loop Mode, so it is as close as possible to the patient's actual physiological needs.",
   "estimated-total-insulin-avg-how-calculate-tooltip": "**How we calculate this:**  All basal and bolus insulin delivery during closed-loop period (in Units) added together, normalised for 24h, and divided by the number of days in this view.",
@@ -460,7 +465,7 @@
   "patient": "Patient",
   "patient-list-search-placeholder": "Search for a patient...",
   "patient-list-search-tooltip": "Search by first name, last name or birthdate (dd/mm/yyyy)",
-  "patient-profile": "Patient profile",
+  "patient-profile": "Profile",
   "patient-profile-hba1c": "Initial HbA1c {{hba1cDate}}",
   "patient-update-error": "Patient update failed",
   "patient-update-success": "Patient update succeeded",
@@ -485,7 +490,15 @@
   "progression-proposal": "Progression proposal",
   "pump-battery-empty": "Pump battery empty",
   "ratio-dose": "Ratio",
-  "range-and-alerts": "Range & alerts",
+  "range": "Range",
+  "range-description": "Set manually each value of the glucose thresholds or apply international recommendations for:",
+  "range-hyperglycemia": "Hyperglycemia",
+  "range-hypoglycemia": "Hypoglycemia",
+  "range-profile-type-1-and-2": "Type 1",
+  "range-profile-pregnancy-type-1": "Pregnancy type 1",
+  "range-profile-custom": "Custom",
+  "range-severe-hyperglycemia": "Severe hyperglycemia",
+  "range-severe-hypoglycemia": "Severe hypoglycemia",
   "readings-in-range-bgm-daily-average": "**Readings In Range:** Number of {{smbgLabel}} readings.",
   "recommended-carbs": "Avg. Recommended carbs",
   "refresh": "Refresh",
