--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -266,6 +266,7 @@
   "dialog-pdf-options-output-format-csv": "CSV",
   "dialog-pdf-options-output-format-pdf": "PDF",
   "dialog-pdf-options-presets": "Choose a fixed period",
+  "difference": "Difference",
   "edit-medical-report": "Edit medical report {{number}}",
   "email": "Email",
   "end-date": "End date",
@@ -524,6 +525,7 @@
   "sensor-usage-tooltip": "**Sensor Usage:** Time the {{cbgLabel}} collected data, divided by the total time represented in this view.",
   "sensor-warmup": "Sensor warmup",
   "sensor-warmup-session-end": "Session end",
+  "set-target": "Set target",
   "settings-change": "Settings change",
   "severe-hypoglycemia": "Severe hypoglycemia",
   "severe-hypoglycemia-below": "Severe hypoglycemia below",
@@ -548,6 +550,7 @@
   "start-time": "Start time",
   "switch-role-success": "Your account has been successfully switched to HCP account",
   "system": "System",
+  "target-glucose-level": "Target glucose level",
   "team-add-member-dialog-checkbox-admin": "Define as administrator",
   "team-add-member-dialog-title": "New member",
   "team-code": "Please enter the team code (9 digits)",
