YLP-3657 show popup message (#1859)
* implement dialog
* implement integration tests
* fix: tests integration and unit
* implement unsaved information label in alert page and his tests
* PR feedbacks

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -179,7 +179,6 @@
   "care-team-membership": "Teams I belong to:",
   "care-team-no-membership": "No care teams",
   "care-team-values-applied": "Care team values applied",
-  "care-team-values-applied-for-patient": "The care team values have been applied to this patient. You can customize the values.",
   "care-team-values-entered": "The care team values have been entered. Please save the changes.",
   "care-teams": "Care teams",
   "caregiver-and-family": "Caregiver and family",
@@ -191,6 +190,8 @@
   "chat-footer-private": "Private",
   "chat-footer-reply": "Reply",
   "chat-footer-start-writing": "Start typing",
+  "close-without-saving": "Data change unsaved",
+  "close-without-saving-warning" : "This page has unsaved changes, they will be lost if you close without saving.\nAre you sure you want to leave ?",
   "coefficient-of-variation": "Coefficient of Variation",
   "coefficient-of-variation-tooltip": "**CV (Coefficient of Variation):** The ratio of the standard deviation to the mean glucose. For any period greater than 1 day, we calculate the mean of daily CV.",
   "coefficient-of-variation-with-value": "CV ({{cbgLabel}})",
@@ -232,7 +233,6 @@
   "current-trigger-setting-data": "Current trigger setting: {{nonDataThreshold}}% of data not transmitted over the period",
   "current-trigger-setting-hypoglycemia": "Current trigger setting: {{hypoThreshold}}% of time below {{veryLowBg}} {{bgUnit}} threshold",
   "current-trigger-setting-tir": "Current trigger setting: {{tir}}% of time off target (min at {{lowBg}} {{bgUnit}} max at {{highBg}} {{bgUnit}})",
-  "custom-values-applied-for-patient": "Custom values are applied for this patient. You can apply the default care team values.",
   "custom-values-entered": "Custom values have been entered. Please save the changes.",
   "daily": "Daily",
   "daily-rescue-carbs-and-manual-and-pen-bolus": "Rescue carb intakes & manual & pen bolus over a period of {{numberOfDays}}",
