--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -22,7 +22,6 @@
   "account-creation-finalization": "Account creation finalization",
   "account-creation-finalized": "Account creation finalized",
   "account-flagged-for-deletion": "You no longer have access to this application. Please contact the support if you think this an error.",
-  "account-preferences": "Profile settings",
   "acknowledge-training": "I went through the entire training and I understood it",
   "actions": "Actions",
   "activation-code": "Activation code",
@@ -182,6 +181,7 @@
   "care-team-values-entered": "The care team values have been entered. Please save the changes.",
   "care-teams": "Care teams",
   "caregiver-and-family": "Caregiver and family",
+  "caregiver-upgrade-account-description": "Caregivers can upgrade their account to a professional account to access enhanced features for patient monitoring.",
   "caregivers-title": "My Caregivers",
   "certified-professional-account": "Certified professional",
   "change-columns-settings": "Change columns settings",
@@ -474,7 +474,7 @@
   "pen-bolus": "Pen bolus",
   "pending": "Pending",
   "pending-invite": "Pending invite",
-  "personal-information": "Personal Information",
+  "personal-information": "Personal information",
   "personal-settings": "Personal settings",
   "phone-number": "Phone number",
   "preferences": "Preferences",
@@ -487,7 +487,7 @@
   "privacy-policy-checkbox": "Privacy policy checkbox",
   "product-labelling": "Product Labelling",
   "profession-dialog-title": "Please choose a profession",
-  "profile-settings": "Profile settings",
+  "professional-account": "Professional account",
   "profile-update-failed": "Profile update failed, not all data could be saved",
   "profile-updated": "Profile updated",
   "progression-proposal": "Progression proposal",
@@ -637,6 +637,7 @@
   "until": "Until",
   "updated": "Updated",
   "use-supported-browser": "For a better user experience, it is advised to use Google Chrome on desktop.",
+  "user-account": "User account",
   "user-account-already-verified": "This account is already verified.",
   "user-account-does-not-exist": "The user account does not exist.",
   "user-name": "{{lastName}} {{firstName}}",
