Centered content + tests update

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -180,7 +180,7 @@
   "care-team-values-entered": "The care team values have been entered. Please save the changes.",
   "care-teams": "Care teams",
   "caregiver-and-family": "Caregiver and family",
-  "caregiver-upgrade-account-description": "Caregivers can upgrade their account to a professional account to access enhanced features for patient monitoring.",
+  "caregiver-upgrade-account-description": "Caregivers can upgrade their account to a professional account. The professional account is reserved for healthcare professionals as a tool to facilitate patient care.",
   "caregivers-title": "My Caregivers",
   "certified-professional-account": "Certified professional",
   "change-columns-settings": "Change columns settings",
@@ -486,8 +486,8 @@
   "product-labelling": "Product Labelling",
   "profession-dialog-title": "Please choose a profession",
   "professional-account": "Professional account",
-  "profile-update-failed": "Profile update failed, not all data could be saved",
-  "profile-updated": "Profile updated",
+  "profile-update-failed": "User account update failed, not all data could be saved",
+  "profile-updated": "User account updated",
   "progression-proposal": "Progression proposal",
   "pump-battery-empty": "Pump battery empty",
   "ratio-dose": "Ratio",
