YLP-3730 feat: Delete "Avg. Daily" in dashboard and trends view

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -121,14 +121,9 @@
   "aria-team-leave-dialog-question": "Are you sure you want to leave the care team {{teamName}}?",
   "aria-team-leave-dialog-title": "Leave care team",
   "average-daily-insulin-tooltip": "**Avg. Daily Total Insulin:** All basal and bolus insulin delivery (in Units) added together, divided by the number of days in this view",
-  "average-daily-total-insulin": "Avg. daily delivered Insulin",
-  "average-daily-estimated-total-insulin": "Est. avg. daily insulin requirement",
   "average-glucose": "Avg. Glucose ({{bgSourceLabel}})",
   "average-glucose-tooltip": "**Avg. Glucose ({{bgSourceLabel}}):** All {{bgSourceLabel}} glucose values added together, divided by the number of readings.",
   "avg-daily-carbs": "Avg. Daily Carbs",
-  "avg-daily-declared-carbs": "Avg. Daily declared carbs",
-  "avg-daily-time-in-tight-range": "Avg. Daily Time In Tight Range",
-  "avg-time-loop": "Avg. Daily Time In Loop Mode",
   "avg-time-loop-how-calculate": "**How we calculate this**:\n\n(%) is the duration in loop mode ON or OFF divided by the total duration of basals for this time period.\n\n**(time)** is the average daily time spent in loop mode ON or OFF.",
   "avg-time-loop-tooltip": "**Time In Loop Mode**: Daily average of the time spent in automated basal delivery.",
   "basal-and-correction-bolus": "Basal & correction bolus",
@@ -240,7 +235,8 @@
   "data-not-transmitted": "Data not transmitted",
   "data-not-transmitted-tooltip1": "Data not transmitted: {{percentage}}",
   "data-not-transmitted-tooltip2": "Alert triggered when {{threshold}}% of data are not transmitted over the period considered.",
-  "data-period-text": "Data calculated on the last 14 days (current day excluded)",
+  "data-period-text": "Data calculated on the last 14 days (current day excluded). The values correspond to the average of the daily values.",
+  "data-period-text-trends": "Data calculated on the selected period. The values correspond to the average of the daily values.",
   "date": "Date",
   "date-of-birth": "Date of birth",
   "date-picker-days-range": "{{numDays}} days selected",
@@ -615,7 +611,7 @@
   "time-spent-severe-hypoglycemia": "Time spent in severe hypoglycemia",
   "time-spent-without-uploaded-data": "Time spent without uploaded data",
   "today": "Today",
-  "tooltip-avg-daily-week-carbs": "**Avg. Daily declared carbs**: All carb entries added together (meals and rescue carbs), then divided by the number of days in this view.",
+  "tooltip-avg-daily-week-carbs": "**Total Carbs**: All carb entries added together (meals and rescue carbs), then divided by the number of days in this view.",
   "tooltip-declared-derived-carbs": "Derived from {{total}} carb entries, including rescue carbs.",
   "tooltip-empty-stat": "**Why is this stat empty?**\n\nThere is not enough data present in this view to calculate it.",
   "tooltip-per-day-carbs": "**Total Carbs**: All carb entries from meals or rescue carbs added together.",
