--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -27,6 +27,10 @@
   "actions": "Actions",
   "activation-code": "Activation code",
   "active-insulin": "Active insulin",
+  "adapt-alerts-close": "Keep current values",
+  "adapt-alerts-confirm": "Adapt alerts",
+  "adapt-alerts-message": "The patient has a new profile. Do you wish to adapt the alerts to the new profile or keep the current ones?",
+  "adapt-alerts-title" : "New profile for patient",
   "add-new-patient-disabled-info": "To invite a patient, you must first select a care team from the dropdown menu. You can create you own care team if you need to. Alternatively, you can provide the patient with your YourLoops email address so they can enable private data sharing with you.",
   "add-patient": "Add a patient",
   "added": "Added",
@@ -467,6 +471,7 @@
   "patient-profile-hba1c": "Initial HbA1c {{hba1cDate}}",
   "patient-update-error": "Patient update failed",
   "patient-update-success": "Patient update succeeded",
+  "patient-update-with-alert-success": "Patient update succeeded and alerts changed",
   "pen-bolus": "Pen bolus",
   "pending": "Pending",
   "pending-invite": "Pending invite",
