handle mmol/L units

--- a/locales/en/yourloops.json
+++ b/locales/en/yourloops.json
@@ -328,6 +328,7 @@
   "identification-code": "Identification code",
   "information": "Information",
   "initial-hba1c": "Initial HbA1c",
+  "in-range": "in range",
   "insulin": "Insulin",
   "insulin-on-board": "Insulin on board (IOB)",
   "insulin-unit-u": "U",
